Fixing robot z-index issue. Tweaking toolbox SVG so the toolbox itself is centred in the space (rather than the bit hanging out of it); removing CSS that was fixing the toolbox placement.

--- a/assets/stylesheets/layout/_panel-intro.scss
+++ b/assets/stylesheets/layout/_panel-intro.scss
@@ -39,6 +39,7 @@
 		max-width: 840px;
 		padding-top: 0;
 		position: relative;
+		z-index: 10;
 	}
 
 	#pipe-tap {
