--- a/assets/stylesheets/layout/_panel-selection.scss
+++ b/assets/stylesheets/layout/_panel-selection.scss
@@ -51,7 +51,6 @@
 	}
 
 	#toolbox {
-		margin-left: -11px;
 		width: 236px;
 		height: 150px;
 	}
