--- a/assets/stylesheets/layout/_panel-top-robot.scss
+++ b/assets/stylesheets/layout/_panel-top-robot.scss
@@ -12,7 +12,7 @@
 	animation: .3s 3s 1 forwards TopRobotDrop;
 	width: 230px;
 	height: 350px;
-	z-index: 10;
+	z-index: 5;
 }
 
 .eyes {
